<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_action_person"
        android:layout_margin="10dip"/>

    <!-- 输入用户名框-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dp"
        android:layout_marginTop="10.0dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="80.0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            android:textColor="@color/black"
            android:textSize="15.0sp"
            android:gravity="center" />

        <EditText
            android:id="@+id/login_name_edit"
            android:layout_width="220.0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/login_name_hint"
            android:textSize="15.0sp" />
    </LinearLayout>

    <!-- 输入密码框-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="80.0dp"
            android:layout_height="wrap_content"
            android:text="@string/reg_pwd"
            android:textColor="@color/black"
            android:textSize="15.0sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/login_pwd_edit"
            android:layout_width="220.0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/login_pwd_hint"
            android:maxLength="16"
            android:inputType="textPassword"
            android:textSize="15.0sp" />
    </LinearLayout>

    <!-- 忘记密码 -->
    <TextView
        android:id="@+id/login_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="right"
        android:clickable="true"
        android:text="@string/login_forget_pwd"/>


    <!-- 登录按钮 -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15.0dip"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="40.0dip"
        android:gravity="center"
        android:background="@color/green"
        android:text="@string/login_button" />

</LinearLayout>